setting up for a demo.

--- a/app/home.html
+++ b/app/home.html
@@ -51,23 +51,6 @@
       </div>
 
       <div class="navbar-collapse collapse" id="navbar-mobile">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="/app/home.html">Sales Validation</a>
-          </li>
-
-          <li>
-            <a href="/app/profilePage.html">Profile Page</a>
-          </li>
-
-          <li>
-            <a href="/app/equipmentValidation.html">Equipment Objective</a>
-          </li>
-
-          <li>
-            <a href="/app/planificasionPicos.html">Planificasion Picos</a>
-          </li>
-        </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown dropdown-user">
@@ -78,11 +61,6 @@
             </a>
 
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
-              <li><a href="#"><i class="icon-coins"></i> My balance</a></li>
-              <li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
-              <li class="divider"></li>
-              <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
               <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
             </ul>
           </li>
@@ -90,6 +68,16 @@
       </div>
     </div>
     <div class="page-container" style="min-height:226px">
+
+        <div class="breadcrumb-line" style="margin-bottom: 0; border-bottom: 0; box-shadow: none;">
+        	<ul class="breadcrumb myNav">
+            <li><i class="icon-home2 position-left"></i><a href="/app/profilePage.html">Profile Page</a></li>
+            <li><a href="/app/home.html">Sales Validation</a></li>
+            <li><a href="/app/equipmentValidation.html">Equipment Objective</a></li>
+            <li><a href="/app/planificasionPicos.html">Planificasion Picos</a></li>
+        	</ul>
+          <a class="breadcrumb-elements-toggle"><i class="icon-menu-open"></i></a>
+        </div>
 
 
         <div class="page-container">
@@ -124,8 +112,10 @@
                         </div>
                       </div>
                       <hr>
+                      <div class="text-right">
+                        <button type="submit" class="btn btn-primary" href="#">Compleat Validation <i class="icon-checkmark4 position-right"></i></button>
+                      </div>
                     </div>
-
                     <div class="panel-body">
                       <div class="tabbable">
                         <ul class="nav nav-tabs">
@@ -149,31 +139,31 @@
                               <tbody>
                                 <tr data-id="0">
                                   <td>
-                                    <span style="padding-right:25px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
                                   </td>
                                 </tr>
 
                                 <tr data-id="1">
                                   <td>
-                                    <span style="padding-right:25px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
                                   </td>
                                 </tr>
                               </tbody>
@@ -193,31 +183,31 @@
                               <tbody>
                                 <tr data-id="0">
                                   <td>
-                                    <span style="padding-right:25px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
                                   </td>
                                 </tr>
 
                                 <tr data-id="1">
                                   <td>
-                                    <span style="padding-right:25px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
                                   </td>
                                 </tr>
                               </tbody>
@@ -237,31 +227,31 @@
                               <tbody>
                                 <tr data-id="0">
                                   <td>
-                                    <span style="padding-right:25px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
                                   </td>
                                 </tr>
 
                                 <tr data-id="1">
                                   <td>
-                                    <span style="padding-right:25px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
                                   </td>
                                   <td>
-                                    <span style="padding-left:25px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
                                   </td>
                                 </tr>
                               </tbody>
