--- a/app/equipmentValidation.html
+++ b/app/equipmentValidation.html
@@ -51,23 +51,6 @@
       </div>
 
       <div class="navbar-collapse collapse" id="navbar-mobile">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="/app/home.html">Sales Validation</a>
-          </li>
-
-          <li>
-            <a href="/app/profilePage.html">Profile Page</a>
-          </li>
-
-          <li>
-            <a href="/app/equipmentValidation.html">Equipment Objective</a>
-          </li>
-
-          <li>
-            <a href="/app/planificasionPicos.html">Planificasion Picos</a>
-          </li>
-        </ul>
 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown dropdown-user">
@@ -78,11 +61,6 @@
             </a>
 
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
-              <li><a href="#"><i class="icon-coins"></i> My balance</a></li>
-              <li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
-              <li class="divider"></li>
-              <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
               <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
             </ul>
           </li>
@@ -90,7 +68,15 @@
       </div>
     </div>
     <div class="page-container" style="min-height:226px">
-
+        <div class="breadcrumb-line" style="margin-bottom: 0; border-bottom: 0; box-shadow: none;">
+          <ul class="breadcrumb myNav">
+            <li><i class="icon-home2 position-left"></i><a href="/app/profilePage.html">Profile Page</a></li>
+            <li><a href="/app/home.html">Sales Validation</a></li>
+            <li><a href="/app/equipmentValidation.html">Equipment Objective</a></li>
+            <li><a href="/app/planificasionPicos.html">Planificasion Picos</a></li>
+          </ul>
+          <a class="breadcrumb-elements-toggle"><i class="icon-menu-open"></i></a>
+        </div>
 
         <div class="page-container">
 
@@ -124,6 +110,9 @@
                         </div>
                       </div>
                       <hr>
+                      <div class="text-right">
+                        <button type="submit" class="btn btn-primary" href="#">Compleat Validation <i class="icon-checkmark4 position-right"></i></button>
+                      </div>
                       <input id="inputBrand" type="text" class="inputText form-control" style="width: 350px; float:left; margin-right:20px;" placeholder="Brand:">
                       <input id="inputEquipment" type="text" class="inputText form-control" style="width: 350px;" placeholder="Equipment Type:">
                     </div>
